# lettergen

./: .gitignore  Cargo.toml  README.md  flake.nix  result
.github/workflows/: build.yml
nix/: inputs.nix
src/: args.rs  cli.rs  entry.rs  gen.rs  letter.rs  main.rs  ui.rs
