[package]
name = "lettergen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
andrew = "0.3.1"
image = "0.23"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.16"
printpdf = "0.5.0"
clap = { version = "3", features = ["derive"] }
druid = "0.7"
