[package]
name = "lettergen"
version = "0.1.0"
edition = "2021"

[dependencies]
andrew = { git = "https://github.com/ChristopherJMiller/andrew.git" }
image = "0.23"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.16"
printpdf = "0.5.0"
clap = { version = "3", features = ["derive"] }
druid = "0.7"
